[dependencies]
arrow = {version = "57", optional = true}
# NATS Dependencies
async-nats = {version = "0.49", optional = true}
async-trait = "0.1"
base64 = "0.22"
bb8 = {version = "0.8", optional = true}
bb8-tiberius = {version = "0.15", optional = true}
chrono = {workspace = true}
clap = {version = "4.5", features = ["derive"], optional = true}
colored = {version = "2.1", optional = true}
dashmap = {workspace = true}
# Arrow Flight Dependencies
fraiseql-arrow = {workspace = true, optional = true}
fraiseql-error = {workspace = true}
futures = "0.3"
hex = {workspace = true}
hmac = {workspace = true}
http = "1.1"
# SMTP for the email action (#349). rustls only — no OpenSSL (matches the
# workspace TLS stack). Unconditional: it adds no new rustls version (reqwest
# already pulls rustls here), and keeping it always-compiled means the
# refused-send acceptance test runs in the standard test leg, not only behind a
# feature the CI test leg would skip.
lettre = {version = "0.11", default-features = false, features = ["builder", "smtp-transport", "tokio1", "tokio1-rustls-tls"]}
parking_lot = {workspace = true}
prometheus = {version = "0.14", optional = true}
rand = "0.9"
redis = {workspace = true, optional = true}
reqwest = {workspace = true}
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
sha2 = "0.11"
# sqlx with multiple database backends (features enabled conditionally)
sqlx = {version = "0.8", features = ["runtime-tokio", "uuid", "chrono"]}
tabwriter = {version = "1.4", optional = true}
thiserror = "2.0"
# SQL Server Dependencies (tiberius - sqlx doesn't support MSSQL)
# SECURITY: use native-tls instead of rustls to avoid EOL rustls 0.21 (GHSA-6g18-jhpc-69jc)
tiberius = {version = "0.12", default-features = false, features = ["native-tls", "chrono"], optional = true}
tokio = {workspace = true}
tokio-util = {version = "0.7", features = ["compat"], optional = true}
tracing = "0.1"
uuid = {workspace = true}

[dev-dependencies]
criterion = {version = "0.5", features = ["async_tokio"]}
# Round-trip verification of the webhook HMAC signer against the project's own
# Stripe-shape verifier (#345). Test-only; fraiseql-webhooks does not depend on
# fraiseql-observers, so there is no production dependency cycle.
fraiseql-webhooks = {path = "../fraiseql-webhooks"}
fraiseql-test-utils = {path = "../fraiseql-test-utils"}
fraiseql-test-support = {path = "../fraiseql-test-support"}
proptest = {workspace = true}
# Raw Redis client for the #428 cache-invalidation integration test: seed keys and
# assert deletions against the bound Redis service. Dev-only (the production Redis
# dependency is the optional `redis` behind the `caching` feature).
redis = {workspace = true}
temp-env = {workspace = true}
tokio-test = "0.4"
wiremock = "0.6"

[features]
all-db = ["postgres", "mysql", "mssql"]
analytics = ["arrow"]
# Arrow Features
arrow = ["fraiseql-arrow", "dep:arrow"]
caching = ["redis"]
checkpoint = []
cli = ["dep:clap", "dep:colored", "dep:tabwriter"]
dedup = ["redis"]
# Default features (PostgreSQL for backward compatibility)
default = ["postgres"]
# Descriptive bundles
enterprise = ["checkpoint", "dedup", "caching", "queue", "search", "metrics"]
metrics = ["prometheus"]
# SQL Server uses tiberius crate (sqlx doesn't support MSSQL in v0.8)
mssql = ["tiberius", "tokio-util", "bb8", "bb8-tiberius"]
# Multi-Database Features
multi-db = ["postgres", "mysql"]
mysql = ["sqlx/mysql"]
# NATS Features
nats = ["async-nats"]
# Database backends (enable sqlx features)
postgres = ["sqlx/postgres"]
queue = ["redis"]
redis-lease = ["redis"]
search = []
sqlite = ["sqlx/sqlite"]
testing = []

[lints]
workspace = true

[package]
description = "Observer system for reactive business logic in FraiseQL v2"
name = "fraiseql-observers"
readme = "README.md"
authors.workspace = true
categories.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true
