[package]
name = "fraiseql-runtime"
authors.workspace = true
categories.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
tokio = { version = "1", features = ["full", "signal"] }
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "compression-br", "compression-gzip", "limit", "timeout", "trace", "request-id"] }
http = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
thiserror = "1"
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio", "uuid", "chrono"], optional = true }
metrics = { version = "0.22", optional = true }
metrics-exporter-prometheus = { version = "0.14", optional = true }
opentelemetry = { version = "0.22", optional = true }
opentelemetry-otlp = { version = "0.15", optional = true }
fraiseql-error = { path = "../fraiseql-error" }
pin-project = "1"
dirs = "5"

[features]
default = []
database = ["sqlx"]
metrics = ["dep:metrics", "metrics-exporter-prometheus"]
tracing-opentelemetry = ["opentelemetry", "opentelemetry-otlp"]

[lints]
workspace = true
