[dependencies]
# Encryption
aes-gcm = "0.10"
async-trait = "0.1"
base64 = "0.22"
chrono = {version = "0.4", features = ["serde"]}
fraiseql-core = {workspace = true}
rand = "0.8"
reqwest = {version = "0.12", features = ["json"]}
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
tokio = {version = "1.45", features = ["full"]}
tracing = "0.1"
uuid = {version = "1.0", features = ["v4", "serde"]}
zeroize = "1.8"

[dev-dependencies]
temp-env = {workspace = true}
tempfile = "3.13"
tokio-test = "0.4"

[lints]
workspace = true

[package]
description = "Secrets management and field-level encryption for FraiseQL"
edition = "2021"
license = "MIT OR Apache-2.0"
name = "fraiseql-secrets"
repository = "https://github.com/fraiseql/fraiseql"
version.workspace = true
