[dependencies]
# Encryption
aes-gcm = { version = "0.10", features = ["zeroize"] }
async-trait = "0.1"
base64 = "0.22"
chrono = {version = "0.4", features = ["serde"]}
fraiseql-core = {workspace = true}
rand = "0.8"
reqwest = {workspace = true}
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
thiserror = {workspace = true}
tokio = {version = "1.45", features = ["full"]}
tracing = "0.1"
uuid = {version = "1.0", features = ["v4", "serde"]}
zeroize = "1.8"

[dev-dependencies]
temp-env = {workspace = true}
tempfile = "3.13"
tokio-test = "0.4"
wiremock = "0.6"

[lints]
workspace = true

[package]
name = "fraiseql-secrets"
description = "Secrets management and field-level encryption for FraiseQL"
authors.workspace = true
categories.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true
