[dependencies]
# Encryption
aes-gcm = {workspace = true, features = ["zeroize"]}
async-trait = {workspace = true}
base64 = {workspace = true}
chrono = {workspace = true}
fraiseql-core = {workspace = true}
rand = {workspace = true}
reqwest = {workspace = true}
serde = {workspace = true}
serde_json = {workspace = true}
thiserror = {workspace = true}
tokio = {workspace = true, features = ["rt", "macros", "sync", "time", "fs"]}
tracing = {workspace = true}
uuid = {workspace = true}
zeroize = "1.8"

[dev-dependencies]
temp-env = {workspace = true}
tempfile = {workspace = true}
tokio-test = "0.4"
wiremock = "0.6"

[lints]
workspace = true

[package]
description = "Secrets management and field-level encryption for FraiseQL"
name = "fraiseql-secrets"
authors.workspace = true
categories.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true
