[[bench]]
harness = false
name = "performance_benchmarks"

[dependencies]
# Encryption
aes-gcm = {workspace = true}
# Error handling
anyhow = {workspace = true}
# Lock-free atomic swap for hot-reloading Arc<Executor>
arc-swap = {workspace = true}
async-trait = {workspace = true}
aws-config = {version = "1", optional = true}
# AWS S3 (optional)
# V3: rustls 0.21 transitive via aws-smithy-http-client; blocked on AWS upstream
aws-sdk-s3 = {version = "1", optional = true}
# HTTP server
axum = {workspace = true, features = ["macros", "ws"]}
base64 = {workspace = true}
# File processing
bytes = {workspace = true}
# AEAD encryption for state protection (PKCE)
chacha20poly1305 = "0.10"
# Date/time handling
chrono = {workspace = true}
dashmap = {workspace = true}
dirs = "5"
ed25519-dalek = {version = "2", features = ["std"]}
fraiseql-arrow = {workspace = true, optional = true}
# Authentication
fraiseql-auth = {workspace = true, optional = true}
# FraiseQL core
fraiseql-core = {workspace = true, features = ["postgres", "schema-lint"]}
fraiseql-error = {workspace = true, features = ["axum-compat"]}
# FraiseQL observers (optional)
fraiseql-observers = {workspace = true, optional = true}
# Secrets management and encryption
fraiseql-secrets = {workspace = true, optional = true}
# Webhooks
fraiseql-webhooks = {workspace = true, optional = true}
futures = {workspace = true}
# GraphQL AST parsing for secure query validation
graphql-parser = {workspace = true}
hex = {workspace = true}
http-body-util = {workspace = true, optional = true}
# Webhook signature verification
hmac = {workspace = true}
http = "1"
# CIDR matching for trusted proxy IP validation
ipnet = {version = "2", features = ["serde"]}
# Authentication (JWT, OAuth, OIDC)
jsonwebtoken = {workspace = true}
# Metrics (optional)
metrics = {version = "0.22", optional = true}
metrics-exporter-prometheus = {version = "0.18", optional = true}
# OpenTelemetry (optional)
opentelemetry = {version = "0.29", optional = true}
opentelemetry-otlp = {version = "0.29", features = ["http-proto"], optional = true}
opentelemetry_sdk = {version = "0.29", features = ["rt-tokio"], optional = true}
parking_lot = {workspace = true}
pin-project = "1"
rand = {workspace = true}
# Redis for rate limiting (optional)
redis = {version = "0.28", features = ["aio", "tokio-comp", "connection-manager"], optional = true}
rmp-serde = { version = "1", optional = true }
reqwest = {workspace = true}
# MCP (Model Context Protocol) server (optional)
rmcp = {version = "0.16", default-features = false, features = ["server", "macros", "transport-async-rw", "transport-streamable-http-server"], optional = true}
# TLS/SSL support
rustls = "0.23"
rustls-pemfile = "2.2"
schemars = {version = "1", optional = true}
# Serialization
serde = {workspace = true}
serde_json = {workspace = true}
sha1 = "0.10"
sha2 = {workspace = true}
# Database
sqlx = {workspace = true, features = ["postgres", "uuid", "chrono"]}
# Constant-time comparison (timing attack prevention)
subtle = "2.5"
thiserror = {workspace = true}
# Async runtime
tokio = {workspace = true, features = ["rt", "macros", "sync", "time", "net", "fs", "signal", "io-util", "io-std"]}
tokio-rustls = "0.25"
# Config and paths
toml = {workspace = true}
# gRPC / Arrow Flight server (optional)
prost = {workspace = true, optional = true}
prost-reflect = {workspace = true, optional = true}
tonic = {workspace = true, optional = true}
tonic-reflection = {workspace = true, optional = true}
tower = {workspace = true, features = ["full"]}
tower-http = {version = "0.6", features = ["trace", "cors", "compression-full", "limit", "timeout", "request-id"]}
# Tracing
tracing = {workspace = true}
tracing-opentelemetry = {version = "0.32", optional = true}
tracing-subscriber = {workspace = true, features = ["json"]}
urlencoding = "2.1"
# Fast non-cryptographic hashing for ETag generation (REST transport)
xxhash-rust = { version = "0.8", features = ["xxh3"], optional = true }
# UUID generation
uuid = {workspace = true}
zeroize = "1.8"

[dev-dependencies]
# Performance testing
criterion = {version = "0.5", features = ["async_tokio"]}
fraiseql-auth = {workspace = true}
fraiseql-test-utils = {path = "../fraiseql-test-utils", features = ["postgres", "grpc"]}
futures = {workspace = true}
proptest = {workspace = true}
# HTTP testing
reqwest = {workspace = true}
# YAML parsing for deployment tests
serde_yaml = "0.9"
# Database testing
sqlx = {workspace = true, features = ["postgres"]}
temp-env = {workspace = true}
tempfile = {workspace = true}
# Container-based integration tests
testcontainers = {version = "0.26", features = ["watchdog"]}
testcontainers-modules = {version = "0.14", features = ["postgres"]}
tokio-postgres = {workspace = true}
# Testing
tokio-test = "0.4"
# Utilities for E2E tests
tokio-util = {workspace = true}
wiremock = "0.6"

[features]
# Arrow Flight server for high-performance data delivery
arrow = ["dep:fraiseql-arrow", "dep:tonic"]
# gRPC transport: row-shaped view queries via protobuf wire encoding
grpc = ["dep:http-body-util", "dep:prost", "dep:prost-reflect", "dep:tonic", "dep:tonic-reflection", "fraiseql-core/grpc"]
auth = ["dep:fraiseql-auth"]
aws-s3 = ["aws-sdk-s3", "aws-config"]
azure-blob = []
gcs = []
cors = []
database = []
# auth is included by default because auth middleware is wired into the core request pipeline.
# secrets and webhooks are opt-in: add them to your dependency features when needed.
# Note: `--no-default-features` currently fails to compile (some code paths are not yet gated).
# Full `default = []` is a planned improvement (see roadmap.md).
default = ["auth"]
# MCP (Model Context Protocol) server
mcp = ["rmcp", "schemars"]
# REST transport (resource-centric REST API auto-generated from compiled schema)
rest = ["dep:xxhash-rust"]
metrics = ["dep:metrics", "metrics-exporter-prometheus"]
# Observer system for reactive business logic
observers = ["fraiseql-observers"]
# observers-enterprise: high-availability features for multi-instance deployments.
# Not a paid/commercial tier — the name reflects production HA requirements.
observers-enterprise = ["observers", "fraiseql-observers/enterprise", "fraiseql-observers/nats"]
observers-nats = ["observers", "fraiseql-observers/nats"]
redis-apq = ["fraiseql-core/redis-apq"]
redis-idempotency = ["rest", "redis", "dep:rmp-serde"]
redis-pkce = ["auth", "fraiseql-auth/redis-pkce"]
redis-rate-limiting = ["redis"]
secrets = ["dep:fraiseql-secrets"]
testing = []
tracing-opentelemetry = ["opentelemetry", "opentelemetry_sdk", "opentelemetry-otlp", "dep:tracing-opentelemetry"]
webhooks = ["dep:fraiseql-webhooks"]
# Wire backend for streaming JSON queries with low memory overhead
wire-backend = ["fraiseql-core/wire-backend"]

[lints]
workspace = true

[package]
categories = ["database", "web-programming::http-server"]
description = "HTTP server for FraiseQL v2 GraphQL engine"
keywords = ["graphql", "sql", "database", "server", "api"]
name = "fraiseql-server"
authors.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[[test]]
name = "rest_transport_e2e_test"
required-features = ["rest"]

[[test]]
name = "grpc_transport_e2e_test"
required-features = ["grpc"]

[[test]]
name = "secrets_manager_integration_test"
required-features = ["secrets"]
