[[bench]]
harness = false
name = "performance_benchmarks"

[dependencies]
# Encryption
aes-gcm = "0.10"
# Error handling
anyhow = "1.0"
# Atomic pointer swap (wait-free reads for schema hot-reload)
arc-swap = { workspace = true }
async-trait = "0.1"
aws-config = {version = "1", optional = true}
# AWS S3 (optional)
# V3: rustls 0.21 transitive via aws-smithy-http-client; blocked on AWS upstream
aws-sdk-s3 = {version = "1", optional = true}
# HTTP server
axum = {workspace = true, features = ["macros", "ws"]}
base64 = "0.22"
# File processing
bytes = "1"
# AEAD encryption for state protection (PKCE)
chacha20poly1305 = "0.10"
# Date/time handling
chrono = {version = "0.4", features = ["serde"]}
dashmap = "6.1"
dirs = "5"
ed25519-dalek = {version = "2", features = ["std"]}
fraiseql-arrow = {workspace = true, optional = true}
# Authentication
fraiseql-auth = {workspace = true, optional = true}
# FraiseQL core
fraiseql-core = {workspace = true, features = ["postgres", "schema-lint"]}
fraiseql-error = {workspace = true, features = ["axum-compat"]}
# FraiseQL observers (optional)
fraiseql-observers = {workspace = true, optional = true}
# Secrets management and encryption
fraiseql-secrets = {workspace = true, optional = true}
# Webhooks
fraiseql-webhooks = {workspace = true, optional = true}
futures = "0.3"
# GraphQL AST parsing for secure query validation
graphql-parser = {workspace = true}
hex = "0.4"
# Webhook signature verification
hmac = "0.12"
http = "1"
# CIDR matching for trusted proxy IP validation
ipnet = {version = "2", features = ["serde"]}
# Authentication (JWT, OAuth, OIDC)
jsonwebtoken = {version = "10", features = ["rust_crypto"]}
# Metrics (optional)
metrics = {version = "0.22", optional = true}
metrics-exporter-prometheus = {version = "0.18", optional = true}
# OpenTelemetry (optional) — versions must match tracing-opentelemetry 0.32
opentelemetry = {version = "0.31", optional = true}
opentelemetry-otlp = {version = "0.31", features = ["http-proto"], optional = true}
opentelemetry_sdk = {version = "0.31", features = ["rt-tokio"], optional = true}
parking_lot = {workspace = true}
pin-project = "1"
rand = "0.8"
# Redis for rate limiting (optional)
redis = {version = "1", features = ["aio", "tokio-comp", "connection-manager"], optional = true}
reqwest = {workspace = true}
# MCP (Model Context Protocol) server (optional)
rmcp = {version = "0.16", default-features = false, features = ["server", "macros", "transport-async-rw", "transport-streamable-http-server"], optional = true}
# TLS/SSL support
rustls = "0.23"
rustls-pemfile = "2.2"
schemars = {version = "1", optional = true}
# Serialization
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
sha1 = "0.10"
sha2 = "0.10"
# Database
sqlx = {version = "0.8", features = ["postgres", "runtime-tokio", "uuid", "chrono"]}
# Constant-time comparison (timing attack prevention)
subtle = "2.5"
thiserror = "2.0"
# Async runtime
tokio = {workspace = true}
tokio-rustls = "0.25"
# Config and paths
toml = "0.8"
# Arrow Flight server (optional)
tonic = {version = "0.14", optional = true}
tower = {version = "0.5", features = ["full"]}
tower-http = {version = "0.6", features = ["trace", "cors", "compression-full", "limit", "timeout", "request-id"]}
# Tracing
tracing = "0.1"
tracing-opentelemetry = {version = "0.32", optional = true}
tracing-subscriber = {version = "0.3", features = ["env-filter", "json"]}
urlencoding = "2.1"
# UUID generation
uuid = {version = "1.0", features = ["v4", "serde"]}
zeroize = "1.8"

[dev-dependencies]
# Performance testing
criterion = {version = "0.5", features = ["async_tokio"]}
fraiseql-auth = {workspace = true}
fraiseql-test-utils = {path = "../fraiseql-test-utils"}
futures = "0.3"
proptest = {workspace = true}
# HTTP testing
reqwest = {workspace = true}
# Database testing
sqlx = {version = "0.8", features = ["runtime-tokio", "postgres"]}
temp-env = {workspace = true}
tempfile = "3.13"
# Container-based integration tests
testcontainers = {version = "0.26", features = ["watchdog"]}
testcontainers-modules = {version = "0.14", features = ["postgres"]}
tokio-postgres = {workspace = true}
# Testing
tokio-test = "0.4"
tokio-tungstenite = "0.28"
# Utilities for E2E tests
tokio-util = "0.7"
wiremock = "0.6"

[features]
# Arrow Flight server for high-performance data delivery
arrow = ["dep:fraiseql-arrow", "dep:tonic"]
auth = ["dep:fraiseql-auth"]
aws-s3 = ["aws-sdk-s3", "aws-config"]
cors = []
database = []
# auth is included by default because auth middleware is wired into the core request pipeline.
# secrets and webhooks are opt-in: add them to your dependency features when needed.
default = ["auth", "tracing-opentelemetry"]
# MCP (Model Context Protocol) server
mcp = ["rmcp", "schemars"]
metrics = ["dep:metrics", "metrics-exporter-prometheus"]
# Observer system for reactive business logic
observers = ["fraiseql-observers"]
# observers-enterprise: high-availability features for multi-instance deployments.
# Not a paid/commercial tier — the name reflects production HA requirements.
observers-enterprise = ["observers", "fraiseql-observers/enterprise", "fraiseql-observers/nats"]
observers-nats = ["observers", "fraiseql-observers/nats"]
redis-apq = ["fraiseql-core/redis-apq"]
redis-pkce = ["auth", "fraiseql-auth/redis-pkce"]
redis-rate-limiting = ["redis"]
secrets = ["dep:fraiseql-secrets"]
testing = []
tracing-opentelemetry = ["opentelemetry", "opentelemetry_sdk", "opentelemetry-otlp", "dep:tracing-opentelemetry"]
webhooks = ["dep:fraiseql-webhooks"]
# Wire backend for streaming JSON queries with low memory overhead
wire-backend = ["fraiseql-core/wire-backend"]

[lints]
workspace = true

[package]
categories = ["database", "web-programming::http-server"]
description = "HTTP server for FraiseQL v2 GraphQL engine"
keywords = ["graphql", "sql", "database", "server", "api"]
name = "fraiseql-server"
authors.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[[test]]
name = "secrets_manager_integration_test"
required-features = ["secrets"]
