[[bin]]
name = "fraiseql-server"
required-features = ["cli"]

[[bench]]
harness = false
name = "performance_benchmarks"

[[bench]]
harness = false
name = "realtime_bench"

[dependencies]
# CLI argument parsing (optional — only needed by the binary and fraiseql-cli)
clap = {version = "4.5", features = ["derive", "env"], optional = true}
# Encryption
aes-gcm = "0.10"
# Error handling
anyhow = "1.0"
# Atomic pointer swap (wait-free reads for schema hot-reload)
arc-swap = { workspace = true }
ahash.workspace = true
async-trait = "0.1"
aws-config = {version = "1", optional = true}
# AWS S3 (optional)
# V3: rustls 0.21 transitive via aws-smithy-http-client; blocked on AWS upstream
aws-sdk-s3 = {version = "1", optional = true}
# HTTP server
axum = {workspace = true, features = ["macros", "ws"]}
base64 = "0.22"
# File processing
bytes = "1"
# AEAD encryption for state protection (PKCE)
chacha20poly1305 = "0.10"
# CSV writer (gated by `export-csv` feature). Already a transitive dep via
# arrow-csv; declaring it explicitly here gives us a stable surface.
csv = {version = "1.4", optional = true}
# XLSX writer (gated by `export-xlsx` feature). `constant_memory` spills
# in-progress worksheet data to a tempfile so peak heap stays bounded for
# the 100_000-row cap.
rust_xlsxwriter = {version = "0.95", features = ["constant_memory"], optional = true}
# Temp-file management for XLSX response buffering (gated by `export-xlsx`).
tempfile = {workspace = true, optional = true}
# Date/time handling
chrono = {workspace = true}
dashmap = {workspace = true}
dirs = "6"
fraiseql-arrow = {workspace = true, optional = true}
# Authentication
fraiseql-auth = {workspace = true, optional = true}
# Edge Functions runtime
fraiseql-functions = {workspace = true}
# FraiseQL core
fraiseql-core = {workspace = true, features = ["postgres", "schema-lint"]}
fraiseql-error = {workspace = true, features = ["axum-compat"]}
# FraiseQL object storage
fraiseql-storage = {workspace = true}
# FraiseQL observers (optional)
fraiseql-federation = {workspace = true, optional = true}
fraiseql-observers = {workspace = true, optional = true}
# Secrets management and encryption
fraiseql-secrets = {workspace = true, optional = true}
# Webhooks
fraiseql-webhooks = {workspace = true, optional = true}
futures = "0.3"
# GraphQL AST parsing for secure query validation
graphql-parser = {workspace = true}
hex = "0.4"
# Webhook signature verification
hmac = "0.13"
http = "1"
http-body = { version = "1.0.1", optional = true }
http-body-util = { version = "0.1.3", optional = true }
# CIDR matching for trusted proxy IP validation
ipnet = {version = "2", features = ["serde"]}
# Authentication (JWT, OAuth, OIDC)
jsonwebtoken = {version = "10", features = ["rust_crypto"]}
# Metrics (optional)
metrics = {version = "0.22", optional = true}
metrics-exporter-prometheus = {version = "0.18", optional = true}
# OpenTelemetry (optional) — versions must match tracing-opentelemetry 0.32
opentelemetry = {version = "0.31", optional = true}
opentelemetry-otlp = {version = "0.31", features = ["http-proto"], optional = true}
opentelemetry_sdk = {version = "0.31", features = ["rt-tokio"], optional = true}
parking_lot = {workspace = true}
pin-project = "1"
prost = { version = "0.14.3", optional = true }
prost-reflect = { version = "0.16.3", optional = true, features = ["serde"] }
rand = "0.9"
# Redis for rate limiting (optional)
redis = {workspace = true, optional = true}
reqwest = {workspace = true}
# MessagePack serialization for Redis idempotency store
rmp-serde = {version = "1", optional = true}
# MCP (Model Context Protocol) server (optional)
rmcp = {version = "1.4", default-features = false, features = ["server", "macros", "transport-async-rw", "transport-streamable-http-server"], optional = true}
# TLS/SSL support
rustls = "0.23"
rustls-pemfile = "2.2"
schemars = {version = "1", optional = true}
# Embed static assets (studio SPA) into the binary
rust-embed = {version = "8", features = ["interpolate-folder-path"]}
# Serialization
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
sha1 = "0.11"
sha2 = "0.11"
# Database
sqlx = {version = "0.8", features = ["postgres", "runtime-tokio", "uuid", "chrono"]}
# Constant-time comparison (timing attack prevention)
subtle = "2.5"
thiserror = "2.0"
# Async runtime
tokio = {workspace = true}
tokio-rustls = "0.26"
# Config and paths
toml = "0.8"
# Arrow Flight server (optional)
tonic = {version = "0.14", optional = true}
tower = {version = "0.5", features = ["full"]}
tower-http = {version = "0.6", features = ["trace", "cors", "compression-full", "limit", "timeout", "request-id"]}
# Tracing
tracing = "0.1"
tracing-opentelemetry = {version = "0.32", optional = true}
tracing-subscriber = {version = "0.3", features = ["env-filter", "json"]}
url = {workspace = true}
urlencoding = "2.1"
# UUID generation
uuid = {workspace = true}
xxhash-rust = {workspace = true}
zeroize = "1.8"

[dev-dependencies]
# Performance testing
criterion = {version = "0.5", features = ["async_tokio"]}
fraiseql-auth = {workspace = true}
fraiseql-cli = {workspace = true}
fraiseql-federation = {workspace = true, features = ["test-utils"]}
fraiseql-test-utils = {path = "../fraiseql-test-utils"}
fraiseql-test-support = {path = "../fraiseql-test-support"}
futures = "0.3"
proptest = {workspace = true}
# HTTP testing
reqwest = {workspace = true}
# Database testing
sqlx = {version = "0.8", features = ["runtime-tokio", "postgres"]}
temp-env = {workspace = true}
tempfile = "3.13"
tokio-postgres = {workspace = true}
# Testing
tokio-test = "0.4"
tonic-reflection = "0.14"
tokio-tungstenite = "0.28"
# Utilities for E2E tests
tokio-util = "0.7"
wiremock = "0.6"

[features]
# Arrow Flight server for high-performance data delivery
arrow = ["dep:fraiseql-arrow", "dep:tonic"]
auth = ["dep:fraiseql-auth"]
aws-s3 = ["aws-sdk-s3", "aws-config", "fraiseql-storage/aws-s3"]
azure-blob = ["fraiseql-storage/azure-blob"]
# CLI argument parsing (clap-derived Cli/ServerArgs structs)
cli = ["dep:clap"]
gcs = ["fraiseql-storage/gcs"]
# gRPC transport
grpc = ["dep:tonic", "dep:prost", "dep:prost-reflect", "dep:http-body", "dep:http-body-util"]
federation = ["fraiseql-core/federation", "dep:fraiseql-federation"]
# Edge functions HTTP endpoint (POST /functions/v1/{name})
functions = []
# auth is included by default because auth middleware is wired into the core request pipeline.
# secrets and webhooks are opt-in: add them to your dependency features when needed.
default = ["auth", "cli"]
# MCP (Model Context Protocol) server
mcp = ["rmcp", "schemars"]
metrics = ["dep:metrics", "metrics-exporter-prometheus"]
# Multi-database runtime support (#327).
# Each flag enables the matching adapter in fraiseql-core / fraiseql-db so that
# the server binary can dispatch on the URL scheme at startup. PostgreSQL is
# always on via the default feature.
#
# Constraints:
# - SQLite is read-only (SqliteAdapter does not implement SupportsMutations).
#   Starting the server against a sqlite:// URL with a schema that declares
#   mutations fails fast at startup.
# - The observer subsystem (LISTEN/NOTIFY) is PostgreSQL-only. With MySQL /
#   SQLite / SQL Server, observer routes are skipped even if the `observers`
#   feature is enabled.
mysql = ["fraiseql-core/mysql"]
sqlite = ["fraiseql-core/sqlite"]
sqlserver = ["fraiseql-core/sqlserver"]
# Observer system for reactive business logic
observers = ["fraiseql-observers"]
# observers-enterprise: high-availability features for multi-instance deployments.
# Not a paid/commercial tier — the name reflects production HA requirements.
observers-enterprise = ["observers", "fraiseql-observers/enterprise", "fraiseql-observers/nats"]
observers-nats = ["observers", "fraiseql-observers/nats"]
redis-apq = ["fraiseql-core/redis-apq"]
# REST idempotency backed by Redis for multi-replica deployments
redis-idempotency = ["redis", "rmp-serde"]
# REST transport
rest = []
# REST export formats — fine-grained flags compose into the `export` umbrella.
# Deps are wired in their respective phases (CSV phase 2, XLSX phase 4, Parquet phase 5).
export-csv = ["dep:csv"]
export-xlsx = ["dep:rust_xlsxwriter", "dep:tempfile"]
export-parquet = []
export = ["export-csv", "export-xlsx", "export-parquet"]
redis-pkce = ["auth", "fraiseql-auth/redis-pkce"]
redis-rate-limiting = ["redis"]
# Persist usage counters to Redis so they survive process restarts
redis-usage = ["redis"]
secrets = ["dep:fraiseql-secrets"]
testing = []
tracing-opentelemetry = ["opentelemetry", "opentelemetry_sdk", "opentelemetry-otlp", "dep:tracing-opentelemetry"]
webhooks = ["dep:fraiseql-webhooks"]
# Wire backend for streaming JSON queries with low memory overhead
wire-backend = ["fraiseql-core/wire-backend"]
prost = ["dep:prost"]
prost-reflect = ["dep:prost-reflect"]
http-body = ["dep:http-body"]
http-body-util = ["dep:http-body-util"]

[lints]
workspace = true

[package]
categories = ["database", "web-programming::http-server"]
description = "HTTP server for FraiseQL v2 GraphQL engine"
keywords = ["graphql", "sql", "database", "server", "api"]
name = "fraiseql-server"
readme = "README.md"
authors.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true
exclude = [
    "studio/node_modules/**",
    "studio/dist/**",
    "studio/.cache/**",
    "studio/.npm/**",
    "studio/*.log",
]

[[test]]
name = "secrets_manager_integration_test"
required-features = ["secrets"]

[[test]]
name = "api_federation_tests"
required-features = ["federation"]

[[test]]
name = "federation_integration_test"
required-features = ["federation"]

[[test]]
name = "federation_saga_validation_test"
required-features = ["federation"]
