[package]
name = "fraiseql-storage"
version = "2.2.0"
edition = "2021"
rust-version = "1.75"
license = "Apache-2.0"
repository = "https://github.com/richer-xyz/fraiseql"
homepage = "https://fraiseql.dev"
documentation = "https://docs.rs/fraiseql-storage"
description = "Object storage backends and HTTP handlers for FraiseQL"
keywords = ["graphql", "storage", "s3", "object-store"]
categories = ["api-bindings", "web-programming"]
publish = true

[dependencies]
fraiseql-error = { path = "../fraiseql-error", version = "2.2" }

bytes = "1"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono"] }
tokio = { version = "1", features = ["fs", "io-util", "rt"] }
axum = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
hex = "0.4"
thiserror = "1"
tracing = "0.1"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
walkdir = "2"

# Storage backends (feature-gated)
aws-sdk-s3 = { version = "1", optional = true }
aws-config = { version = "1", optional = true }

# Image transforms (feature-gated)
image = { version = "0.25", optional = true }
kamadak-exif = { version = "0.5", optional = true }
# google-cloud-storage = { version = "...", optional = true }
# azure_storage_blobs = { version = "0.20", optional = true }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"
tokio = { version = "1", features = ["full"] }
tower = { version = "0.5", features = ["util"] }
testcontainers = { version = "0.27", features = ["watchdog"] }
testcontainers-modules = { version = "0.15", features = ["postgres"] }
uuid = { version = "1", features = ["v4"] }

[features]
default = ["postgres"]
postgres = []
mysql = []
sqlite = []
sqlserver = []
aws-s3 = ["aws-sdk-s3", "aws-config"]
transforms = ["image", "kamadak-exif"]
gcs = []
azure-blob = []
# gcs = ["google-cloud-storage"]
# azure-blob = ["azure_storage_blobs"]
