[dependencies]
async-trait = {workspace = true}
fraiseql-core = {workspace = true, features = ["test-utils"]}
serde_json = {workspace = true}
tempfile = {workspace = true}
tokio = {workspace = true}
uuid = {workspace = true}

[dev-dependencies]

[lints]
workspace = true

[package]
name = "fraiseql-test-utils"
publish = false
authors.workspace = true
categories.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true
