[dependencies]
base64 = {workspace = true}
ed25519-dalek = {version = "2", features = ["std"]}
futures = {workspace = true}
hex = {workspace = true}
hmac = {workspace = true}
p256 = {version = "0.13", features = ["ecdsa", "pem"]}
serde = {workspace = true}
serde_json = {workspace = true}
sha1 = "0.10"
sha2 = {workspace = true}
sqlx = {workspace = true, features = ["postgres"]}
subtle = "2.5"
thiserror = {workspace = true}
# tokio is pulled transitively by sqlx[runtime-tokio]; no direct tokio API usage in this crate
tracing = {workspace = true}
uuid = {workspace = true}

[dev-dependencies]
rand = {workspace = true}
rand_core = {version = "0.6", features = ["getrandom"]}
tokio-test = "0.4"

[features]
testing = []

[lints]
workspace = true

[package]
description = "Webhook signature verification and event processing for FraiseQL"
name = "fraiseql-webhooks"
authors.workspace = true
categories.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true
