[dependencies]
base64 = "0.22"
ed25519-dalek = {version = "2", features = ["std"]}
fraiseql-error = {workspace = true}
futures = "0.3"
hex = "0.4"
hmac = "0.13"
p256 = {version = "0.13", features = ["ecdsa", "pem"]}
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
sha1 = "0.11"
sha2 = "0.11"
sqlx = {version = "0.8", features = ["postgres", "runtime-tokio"]}
subtle = "2.5"
thiserror = "2.0"
tokio = {workspace = true}
tracing = {workspace = true}
uuid = {workspace = true}

[dev-dependencies]
rand = "0.9"
rand_core = {version = "0.6", features = ["getrandom"]}
tokio-test = "0.4"

[features]
testing = []

[lints]
workspace = true

[package]
description = "Webhook signature verification and event processing for FraiseQL"
name = "fraiseql-webhooks"
readme = "README.md"
authors.workspace = true
categories.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true
